Show ref no instead of raw pumpType value

--- a/pump/medtrum/src/main/res/values/strings.xml
+++ b/pump/medtrum/src/main/res/values/strings.xml
@@ -141,7 +141,7 @@
     <string name="sn_input_title">Serial Number</string>
     <string name="sn_input_summary">Enter the serial number of your pump base.</string>
     <string name="sn_input_invalid">Invalid serial number!</string>
-    <string name="pump_unsupported">Pump untested: %1$d! Please contact us at discord or github for support</string>
+    <string name="pump_unsupported">Pump untested: %1$s! Please contact us at discord or github for support</string>
     <string name="alarm_setting_title">Alarm Settings</string>
     <string name="alarm_setting_summary">Select your preferred pump alarm settings.</string>
     <string name="pump_warning_notification_title">Notification on pump warning</string>
